[gd_scene load_steps=5 format=3 uid="uid://bgl5i1tqfbo6h"]

[ext_resource type="Texture2D" uid="uid://dvrbnfyyf4u3c" path="res://Assets/Objects/turret.png" id="1_bw4ya"]
[ext_resource type="Script" path="res://Objects/turret.gd" id="1_ib7un"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bqr0c"]
radius = 130.246

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v4p6"]
size = Vector2(47.5, 25)

[node name="Turret" type="StaticBody2D" groups=["turrets"]]
collision_layer = 16
collision_mask = 11
input_pickable = true
script = ExtResource("1_ib7un")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.352941, 1, 1, 1)
rotation = 1.5708
scale = Vector2(0.07, 0.07)
texture = ExtResource("1_bw4ya")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -22, 44, -22, 45, -19, 55, -19, 55, -10, 44, -10, 44, 0, 0, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bqr0c")

[node name="TurretBulletMarker" type="Marker2D" parent="."]
position = Vector2(67, -15)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
position = Vector2(22.25, -11.5)
shape = SubResource("RectangleShape2D_8v4p6")

[node name="DamageTakenTimer" type="Timer" parent="."]
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.27451, 1, 1)
offset_left = -9.0
offset_top = -30.0
offset_right = 34.0
offset_bottom = -26.0
rotation = 1.5708
max_value = 1.0
value = 1.0
show_percentage = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_turret_bullet_timer_timeout"]
[connection signal="body_entered" from="BodyArea" to="." method="_on_body_area_body_entered"]
[connection signal="body_exited" from="BodyArea" to="." method="_on_body_area_body_exited"]
[connection signal="input_event" from="BodyArea" to="." method="_on_body_area_input_event"]
[connection signal="timeout" from="DamageTakenTimer" to="." method="_on_damage_taken_timer_timeout"]
